Fixed icon button alignment on chrome

--- a/src/3-general/_button.scss
+++ b/src/3-general/_button.scss
@@ -33,7 +33,6 @@
   display: inline-block;
   position: relative;
   text-align: center;
-  vertical-align: middle;
   border: 2px solid transparent;
   transition: $button-transition;
   font-family: $button-font-family;
@@ -57,16 +56,6 @@
     box-shadow: $button-shadow-hover;
   }
 
-  .ri {
-    position: relative;
-    padding-right: 1em; // force space for icon due to absolute position in before pseudo selector
-    transform: scale(2,2);
-    &::before {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-  }
   // button icon styles
   .ri:first-child {
     margin-right: em(5px);
